# cloud

./: README.md  pyproject.toml
blog/: views.py
django_project/: settings.py  urls.py
templates/: 404.html  fail.html  success.html  upload.html
